# AIStudy

./: .gitignore  README.md  RL算法.md  main.py  pyproject.toml  机器学习笔记.md
artificial_neural_network/: torch_demo.py
course/: 001_bernoulli_distribution.py
