[project]
name = "AIStudy"
version = "0.1.0"
requires-python = "==3.11.11"
dependencies = [
    # 数据可视化
    "matplotlib", # 基础绘图库，支持各种静态/交互式图表（折线图/散点图/柱状图等）
    "seaborn", # 基于matplotlib的高级统计可视化，内置美观主题和复杂图表类型
    # 数据处理与计算
    "numpy", # 数值计算基础库，提供高效多维数组(ndarray)和数学函数
    "pandas", # 数据结构化处理工具，DataFrame为核心，支持数据清洗/分析/IO操作
    "scipy", # 科学计算工具包，包含优化/积分/插值/统计等高级数学模块
    # 机器学习框架
    "scikit-learn", # 传统机器学习库，包含分类/回归/聚类等算法及评估工具
    # 开发环境
    "jupyter", # 交互式笔记本环境，支持代码/文档/可视化混合编排
    # PyTorch生态
    "torch", # PyTorch深度学习框架，支持动态计算图和GPU加速
    "torchvision", # 计算机视觉工具库，包含数据集/模型架构/图像变换方法
    "torchaudio", # 音频处理工具库，支持语音数据集和特征提取
    "pytorch-lightning", # PyTorch轻量级封装，简化训练流程和分布式训练
    # 强化学习专用库
    "stable-baselines3", # 最主流的RL实现库（PPO/DQN/SAC等算法）
    # 其他重要库
    "sb3-contrib", # Stable-Baselines3扩展包（额外算法实现）
    "mujoco", # 物理仿真引擎（复杂机器人控制环境）
    # openai
    "openai",
    # tools
    "pyyaml",
    # gym games
    "swig",
    "gymnasium[all]",
]

[tool.uv.sources]
# 标记为workspace
bird-feeder = { workspace = true }
# torch Windows上施一公cuda版本
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
# torch Windows上施一公cuda版本
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# 标记为workspace
[tool.uv.workspace]
members = ["packages/*"]
#exclude = ["packages/seeds"]
